lab02: invoices list with JSONModel and Northwind OData

--- a/sapui5/webapp/i18n/i18n.properties
+++ b/sapui5/webapp/i18n/i18n.properties
@@ -2,7 +2,27 @@
 appTitle=Invoices
 appDescription=Invoices List
 
-panelHeader=Datos de saludo
-
 buttonSayHello=Say Hello
 helloMessage=Hello {0} 
+
+#PANEL
+panelHeader=Datos de saludo
+
+#FRAGMENT
+panelFrTitle=Fragment form
+formLabel=Name
+formPlaceholder=Put your name here...
+
+#HELLO PANEL VIEW
+openDialog=Say Hello dialog
+dialogTitle=Hello dialog
+dialogText=This dialog comes from a Fragment
+closeDialog=Close
+
+#INVOICE LIST
+InvoiceListTitle=Lista Invoice
+invoicesStatusA=New 
+invoicesStatusB=Progress
+invoicesStatusC=Done
+
+InvoiceListTitleN=Northwind Invoice
